fix: todo description overflow

--- a/src/app/presentation/components/todo/todo.component.scss
+++ b/src/app/presentation/components/todo/todo.component.scss
@@ -25,10 +25,16 @@
   &__title {
     width: 100%;
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &__description {
     width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &__date {
